--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akatsuki Challenge</title>
     <!-- Want to get Password? -->
-<!-- Pawword is Kira -->
+    <!-- Pawword is Kira -->
   
-
     <link rel="stylesheet" href="./styles/style.css">
     <script src="js/main.js"></script>
     <script src="js/script.js"></script>
@@ -28,15 +27,14 @@
         <div class="quiz-container">
             <h2>🎭 Shinobi Trial 🎭</h2>
             <p>A reinforcement learning agent is trained to maximize long-term rewards, but it keeps choosing short-term gains instead. What AI concept can fix this issue?</p>
-<div class="options">
-    <button onclick="checkAnswer('A')">A) Overfitting</button>
-    <button onclick="checkAnswer('B')">B) Reward Shaping</button>
-    <button onclick="checkAnswer('C')">C) Bias-Variance Tradeoff</button>
-    <button onclick="checkAnswer('D')">D) Vanishing Gradient</button>
-    <button onclick="checkAnswer('E')">E) Temporal Difference Learning</button>
-    <button onclick="checkAnswer('F')">F) Exploration-Exploitation Balance</button>
-</div>
-
+            <div class="options">
+                <button onclick="checkAnswer('A')">A) Overfitting</button>
+                <button onclick="checkAnswer('B')">B) Reward Shaping</button>
+                <button onclick="checkAnswer('C')">C) Bias-Variance Tradeoff</button>
+                <button onclick="checkAnswer('D')">D) Vanishing Gradient</button>
+                <button onclick="checkAnswer('E')">E) Temporal Difference Learning</button>
+                <button onclick="checkAnswer('F')">F) Exploration-Exploitation Balance</button>
+            </div>
             <p id="timer" class="hidden">Genjutsu Lock: <span id="timeLeft"></span></p>
         </div>
     </div>
@@ -45,16 +43,44 @@
         <div class="success-container">
             <h2>🌟 Mission Accomplished! 🌟</h2>
             <div class="passwords-container">
-                <p>Encrypted Code: <span class="password">oljkwbdjdpl</span></p>
-                
-                <p>Key: <span class="password">-3</span></p>
+                <p>Encrypted Code: <span class="password" id="encryptedCode"></span></p>
+                <p>Key: <span class="password" id="encryptionKey"></span></p>
             </div>
-            <!-- <button onclick="restartChallenge()">Begin New Mission</button> -->
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Base64 encoded "oljkwbdjdpl" (to prevent easy inspection)
+        const base64EncodedPassword = "b2xqa3diZGpkcGw=";
+        const encodedKey = "LTM="; // Base64 encoded "-3"
+
+        function decryptCaesarCipher(text, shift) {
+            return text.replace(/[a-zA-Z]/g, function (char) {
+                let code = char.charCodeAt(0);
+                let base = code >= 65 && code <= 90 ? 65 : 97;
+                return String.fromCharCode(((code - base + shift + 26) % 26) + base);
+            });
+        }
+
+        function revealPassword() {
+            // Decode Base64 values
+            let decodedPassword = atob(base64EncodedPassword);
+            let key = parseInt(atob(encodedKey)); // Convert key to integer
+
+            // Decrypt using Caesar Cipher
+            let decryptedPassword = decryptCaesarCipher(decodedPassword, key);
+
+            // Display the decrypted password dynamically
+            document.getElementById("encryptedCode").textContent = decryptedPassword;
+            document.getElementById("encryptionKey").textContent = key;
+        }
+
+        // Call the function when the success page is loaded
+        window.onload = function() {
+            if (document.getElementById("successPage")) {
+                revealPassword();
+            }
+        };
+    </script>
 </body>
 </html>
-
-
