--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akatsuki Challenge</title>
     <!-- Want to get Password? -->
-    <!-- Pawword is Kira -->
+    <!-- Pawword is kira -->
   
     <link rel="stylesheet" href="./styles/style.css">
     <script src="js/main.js"></script>
